crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__run_tasks__partitions_by_job-2.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SyncProject(partition)"]
    2 [ label="RunTask(partition:task-4)"]
    3 [ label="RunTask(partition:task-5)"]
    4 [ label="RunTask(partition:task-6)"]
    5 [ label="RunTask(partition:task-7)"]
    1 -> 0 [ label="required"]
    2 -> 1 [ label="required"]
    3 -> 1 [ label="required"]
    4 -> 1 [ label="required"]
    5 -> 1 [ label="required"]
}
